--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Mateus</title>
     <meta name="Mavek" content="DEV Florianópolis">
     <link rel="stylesheet" href="/style.final.css">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
 </head>
 
 <body>
